# BootCampMidTermLab

./: .clang-format  .gitignore  .run_engine.sh.swp  CMakeLists.txt  README.md  a_new_file  build_simulator.sh  run.sh  run_engine.sh
Common/: candb.hpp
Common/include/: candb.hpp  socketcan.hpp
Common/src/: socketcan.cpp
Display/: CMakeLists.txt  main.cpp
Display/include/: can_common.hpp  can_opener.hpp  canio.h  cluster_updater.hpp  display.hpp  your_stuff.hpp
Display/qml/: DashboardGaugeStyle.qml  IconGaugeStyle.qml  TachometerStyle.qml  TurnIndicator.qml  ValueSource.qml  cluster-gauges.qml  cluster-gauges.qrc
Display/qml/images/: images.qrc
Display/src/: can_opener.cpp  cluster_updater.cpp  display.cpp  main.cpp  your_stuff.cpp
Doc/: Doxyfile  SWDesign.plantuml  can-frame.txt  candb.plantuml  class.plantuml
Doc/html/: annotated.html  can__tranceiver_8hpp_source.html  classCanTranceiver-members.html  classEngine.html  classTestEmulator-members.html  classTestEmulator.html  classTestEmulator__coll__graph.map  classTestEmulator__coll__graph.md5  classTestEmulator__inherit__graph.map  classTestEmulator__inherit__graph.md5  classTestUi.html  classTestUi__coll__graph.map  classTestUi__coll__graph.md5  classTestUi__inherit__graph.map  classes.html  classscpp_1_1SocketCan-members.html  classscpp_1_1SocketCan.html  classui_1_1UserInput-members.html  classui_1_1UserInput.html  dir_2720d483653d5d2fa41411a1a3cb0a3b.html  dir_2ada1f2118a1e93aa6e9b0140a843ed3.html  dir_3eca51afc31ab9312b29b4249736bc7a.html  dir_b8f95039f62fd29d6ae371841d34f377.html  dir_be42542225c9af846b933e2835881152.html  emu__gtest_8hpp_source.html  functions.html  functions_func.html  hierarchy.html  index.html  inherit_graph_1.map  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_6.md5  io__data_8hpp_source.html  md__home_vsodergr_BootCampMidTermLab_Emulator_doc_README.html  menudata.js  pages.html  socketcan_8hpp_source.html  (+7 more)
Doc/html/search/: all_0.js  all_7.js  all_a.js  all_b.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js  variables_2.js  variables_4.js
DriveLine/: CMakeLists.txt  server.cpp
DriveLine/include/: can_receiver.hpp  main.hpp
DriveLine/src/: can_receiver.cpp  socketcan.cpp
Emulator/: .gitignore  CMakeLists.txt  main.cpp  vcan.sh
Emulator/DriveLine/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
Emulator/DriveLine/include/: can_receiver.hpp  can_tranceiver.hpp  candb.hpp  engine.hpp  ui.hpp
Emulator/DriveLine/src/: can_receiver.cpp  can_tranceiver.cpp  engine.cpp
Emulator/doc/: README.md  SWDesign.md  SWDesign.plantuml  usecase.plantuml
Emulator/include/: can_tranceiver.hpp  engine.hpp  io_data.hpp
Emulator/src/: can_tranceiver.cpp  engine.cpp
Emulator/test/: CMakeLists.txt
Emulator/test/unit/: emu_gtest.cpp  emu_gtest.hpp
UserInput/: CMakeLists.txt  main.cpp
UserInput/doc/: candb.plantuml
UserInput/include/: canSender.hpp  socketcan.hpp  ui.hpp
UserInput/src/: main.cpp  ui.cpp
UserInput/test/: CMakeLists.txt
UserInput/test/unit/: ui_gtest.cpp  ui_gtest.hpp
doc/: SWDesign.plantuml  class.plantuml  software_design.dia
docs/: candb_8hpp_source.html  classCanTranceiver.html  classEngine-members.html  classEngine__coll__graph.map  classEngine__coll__graph.md5  classTestUi-members.html  classTestUi__inherit__graph.md5  dir_3752367cbca4c9b58dde90984de9bccc.html  dir_43ada7958601ffc9632542083e06c5b6.html  dir_4ab6b4cc6a7edbff49100e9123df213f.html  dir_92cb2900980f09bf257878861626e98f.html  dir_a130a60e56f1ac594098607c2f88262f.html  dir_afacf633d1b7d22502e8ca4bf20f2beb.html  dir_c2c7922f6118fc87a228d4edce6feb3e.html  dir_e388ef406be391dcf1cfc4f8daf339b6.html  engine_8hpp_source.html  files.html  functions_vars.html  graph_legend.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_2.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_7.map  inherit_graph_7.md5  inherit_graph_8.map  inherit_graph_8.md5  inherits.html  structEngine_1_1EngineTune.html  structUserInputCanFrame.html  structscpp_1_1CanFrame-members.html  todo.html
docs/search/: all_2.js  all_3.js  all_4.js  all_9.js  all_c.js  all_d.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  variables_1.js  variables_3.js  variables_6.js  variables_7.js  variables_8.js
inc/ui/: ui.hpp
scripts/: dbg_build.sh  dual_candump.sh  vcan.sh
src/ui/: canSender.cpp  main.cpp  ui.cpp
